--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,28 @@
 <head>
   <meta charset="utf-8">
   <title>Analizador de texto</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
+  
 </head>
 
 <body>
-  <script src="index.js" type="module"></script>
+  <div class="container">
+    <h1>Analizador de texto</h1>
+    <input disabled id="caracteres" value="Caracteres: "></input><br>
+    <input disabled id="caracteres-sem-espaço" value="Caracteres sem espaço: "></input><br>
+    <input disabled id="palavras" value="Palavras: "></input><br>
+    <input disabled id="numeros" value="Números: "></input><br>
+    <input disabled id="soma-dos-números" value="Soma dos números: "></input><br>
+    <input disabled id="comprimento-medio" value="Comprimento médio: "></input><br>
+  </div>
+  
+  <div>
+    <p><label for="input"></label></p>  
+    <textarea id="input" name="input" rows="3" cols="40"></textarea>></textarea>
+    <p><input type="button" name="Limpar" value="Limpar"></p>
+  </div>  
+
+    <script src="index.js" type="module"></script>
+  
 </body>
 </html>
