--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   
   <div>
     <p><label for="input"></label></p>  
-    <textarea id="input" name="input" rows="3" cols="40"></textarea>></textarea>
+    <textarea id="input" name="input" rows="3" cols="40"></textarea></textarea>
     <p><input type="button" name="Limpar" value="Limpar"></p>
   </div>  
 
