--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,6 @@
       <h1>Analizador de texto</h1>
     </header>
     
-    <textarea name="user-input"></textarea>
-
       <ul>
         <li data-testid="word-count">Contagem de palavras: </li>
         <li data-testid="character-count">Contagem de caracteres: </li>
@@ -24,11 +22,13 @@
         <li data-testid="word-length-average">Comprimento médio das palavras: </li>
       </ul>
 
+    <textarea name="user-input"></textarea>
+
+    <button id="reset-button">Limpar</button>
+
     <footer><p>Renata Saraiva</p></footer>
 
-    <button id="reset-button"></button>
-
-    <script src="index.js" type="module"></script>
+    <script src="index.js" type="module" ></script>
   
 </body>
 </html>
