--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Analizador de texto</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js" type="module"></script>
 
-<head>
-  <meta charset="utf-8">
-  <title>Analizador de texto</title>
-  <link rel="stylesheet" href="style.css"/>
-  
-</head>
+  </head>
 
-<body>
-    <header>
-      <h1>Analizador de texto</h1>
-    </header>
-    
-      <ul>
-        <li data-testid="word-count">Contagem de palavras: </li>
-        <li data-testid="character-count">Contagem de caracteres: </li>
-        <li data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais pontuação: </li>
-        <li data-testid="nuber-count">Contagem de números:</li>
-        <li data-testid="number-sum">Soma total de números: </li>
-        <li data-testid="word-length-average">Comprimento médio das palavras: </li>
-      </ul>
+  <body>
+    <div class="container">
 
-    <textarea name="user-input"></textarea>
+      <div>
+        <header>
+          <h1>Analizador de texto</h1>
+        </header>
+      </div>  
 
-    <button id="reset-button">Limpar</button>
+      <div>
+          <ul>
+            <li data-testid="word-count">Contagem de palavras:</li>
+            <li data-testid="character-count">Contagem de caracteres:</li>
+            <li data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais pontuação:</li>
+            <li data-testid="nuber-count">Contagem de números:</li>
+            <li data-testid="number-sum">Soma total de números:</li>
+            <li data-testid="word-length-average">Comprimento médio das palavras:
+            </li>
+          </ul>
+      </div>
 
-    <footer><p>Renata Saraiva</p></footer>
+      <div class="container-input">
+        <textarea name="user-input"></textarea>
+      </div>
 
-    <script src="index.js" type="module" ></script>
-  
-</body>
+      <div class="container-button">
+        <button id="reset-button">Limpar</button>
+      </div>
+
+      <footer><p>Autora: Renata Saraiva</p></footer>
+
+      
+    </div>
+  </body>
 </html>
