--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <main class="container">
 
       <div>
         <header>
@@ -17,7 +17,7 @@
         </header>
       </div>  
 
-      <div>
+      <section>
           <ul>
             <li data-testid="word-count">Contagem de palavras:  </li>
             <li data-testid="character-count">Contagem de caracteres:  </li>
@@ -26,7 +26,7 @@
             <li data-testid="number-sum">Soma total de números:  </li>
             <li data-testid="word-length-average">Comprimento médio das palavras:  </li>
           </ul>
-      </div>
+      </section>
 
       <div class="container-input">
         <textarea name="user-input" minlength=" " placeholder="Escreva aqui..."></textarea>
@@ -39,7 +39,7 @@
       <footer><p>Autora: Renata Saraiva</p></footer>
 
       
-    </div>
+    </main>
 
     <script src="index.js" type="module"></script>
   </body>
