--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <li class="contador" data-testid="character-count">Contagem de caracteres: </li>
         <li class="contador" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais
           pontuação: </li>
-        <li class="contador" data-testid="nuber-count">Contagem de números: </li>
+        <li class="contador" data-testid="number-count">Contagem de números: </li>
         <li class="contador" data-testid="number-sum">Soma total de números: </li>
         <li class="contador" data-testid="word-length-average">Comprimento médio das palavras: </li>
       </ul>
