Inclusão do reset na li e ajuste no contador de palavras

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,12 @@
 
     <nav>
       <ul>
-        <li class="contador" data-testid="word-count">Contagem de palavras: </li>
-        <li class="contador" data-testid="character-count">Contagem de caracteres: </li>
-        <li class="contador" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais
-          pontuação: </li>
-        <li class="contador" data-testid="number-count">Contagem de números: </li>
-        <li class="contador" data-testid="number-sum">Soma total de números: </li>
-        <li class="contador" data-testid="word-length-average">Comprimento médio das palavras: </li>
+        <li class="contador" data-testid="word-count"></li>
+        <li class="contador" data-testid="character-count"></li>
+        <li class="contador" data-testid="character-no-spaces-count"></li>
+        <li class="contador" data-testid="number-count"></li>
+        <li class="contador" data-testid="number-sum"></li>
+        <li class="contador" data-testid="word-length-average"></li>
       </ul>
     </nav>
 
